Criação do template jinja2 'zabbix_agentd.conf.j2

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,22 @@
 ---
-zabbix_version: "4.0"
-zabbix_release: "4.0-2"
+# Variável contendo a versão do Zabbix Agent.
+# URL contendo as versões disponíveis: https://repo.zabbix.com/zabbix/
+zabbix_agent_version: "4.0"
+
+# Variável contendo a release do Zabbix Agent.
+zabbix_agent_release: "4.0-2"
+
+# Define se o agente será ativo ou passivo.
+# ativo: o agente envia os dados para o servidor (zabbix server). Valor padrão.
+# passivo: o agente aguarda responde os pedidos de verificação do servidor (zabbix server).
+zabbix_agent_mode: ativo
+
+# Variável contendo a porta utilizada pelo serviço zabbix-agent.service
+zabbix_agent_port: "10050"
+
+# Define a verbosidade do log do serviço.
+# Esse valor vai de 0 a 5.
+zabbix_agent_debuglevel: 2
+
+# IP/DNS do Zabbix Server.
+zabbix_agent_server: 10.10.10.10
