--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,7 @@
 ---
-- name: Instalando repositório do Zabbix Agent {{ zabbix_version }}
+- name: Instalando repositório do Zabbix Agent {{ zabbix_agent_version }}
   yum:
-    name: "https://repo.zabbix.com/zabbix/{{ zabbix_version }}/rhel/7/x86_64/zabbix-release-{{ zabbix_release }}.el7.noarch.rpm"
+    name: "https://repo.zabbix.com/zabbix/{{ zabbix_agent_version }}/rhel/7/x86_64/zabbix-release-{{ zabbix_agent_release }}.el7.noarch.rpm"
     state: present
     update_cache: yes
 
@@ -10,8 +10,22 @@
   args:
     warn: no
 
-- name: Instalando o Zabbix Agent
+- name: Instalando o Zabbix Agent {{ zabbix_agent_release }}
   yum:
     name: zabbix-agent
     state: present
     update_cache: yes
+
+- name: Criando o arquivo de configuração 'zabbix_agentd.conf'
+  template:
+    src: zabbix_agentd.conf.j2
+    dest: /etc/zabbix/zabbix_agentd.conf
+    owner: root
+    group: root
+    mode: 0644
+
+- name: Iniciando o serviço zabbix-agent.service
+  systemd:
+    name: zabbix-agent.service
+    state: started
+    enabled: yes
