--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -4,11 +4,7 @@
     name: "https://repo.zabbix.com/zabbix/{{ zabbix_agent_version }}/rhel/7/x86_64/zabbix-release-{{ zabbix_agent_release }}.el7.noarch.rpm"
     state: present
     update_cache: yes
-
-- name: Limpando o cache do YUM.
-  command: yum clean all
-  args:
-    warn: no
+  notify: yum-clean-metadata
 
 - name: Instalando o Zabbix Agent {{ zabbix_agent_release }}
   yum:
